Rename package to array-kit-lite and update imports
Changed package name from 'array-kit' to 'array-kit-lite' in package.json and updated all relevant import and usage instructions in README.md. Also removed file extension from export in src/index.ts for consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "array-kit",
+  "name": "array-kit-lite",
   "version": "0.1.1",
   "description": "Lightweight array utilities (isEmpty, isNotEmpty, etc.)",
   "main": "dist/index.js",
